Refactor: split generazione codice in due fasi: generazione di IR e lowering